1. Fix bug so that snpEff effects and VEP consequences refresh in filter card after vcf data refreshed (after determine inheritance). 2. More styling for sidebar (fix scrollbar for sidebar content).

--- a/assets/css/slideout.css
+++ b/assets/css/slideout.css
@@ -86,11 +86,18 @@
   -moz-transition: width 0.6s ease;
   -ms-transition: width 0.6s ease;
   -o-transition: width 0.6s ease;
-  overflow: auto;
   /*background-color: #616161;*/
   /*background-color: #68839A;*/
    background-color: #768898;
 
+}
+
+#slider-left-content {
+  height:100%;
+  width:215px;
+  background-color:white;
+  padding:5px;
+  overflow-y: scroll;
 }
 
 #close-slide-left {
